--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.datasource.url=jdbc:h2:~/localdb/spring-mvc-test
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
